--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(SpeedTest)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 
-set(SOURCE_FILES main.cpp SpeedTest.cpp SpeedTest.h SpeedTestClient.cpp SpeedTestClient.h)
+set(SOURCE_FILES main.cpp SpeedTest.cpp SpeedTest.h SpeedTestClient.cpp SpeedTestClient.h TestConfigTemplate.h)
 add_executable(SpeedTest ${SOURCE_FILES})
 
 find_package(CURL REQUIRED)
