--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,17 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.2)
 project(SpeedTest)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 
-set(SOURCE_FILES main.cpp SpeedTest.cpp SpeedTest.h SpeedTestClient.cpp SpeedTestClient.h TestConfigTemplate.h)
+set(SOURCE_FILES
+        main.cpp
+        SpeedTest.cpp
+        SpeedTest.h
+        SpeedTestClient.cpp
+        SpeedTestClient.h
+        TestConfigTemplate.h
+        )
 add_executable(SpeedTest ${SOURCE_FILES})
 
 find_package(CURL REQUIRED)
