--- a/SpeedTestConfig.h.in
+++ b/SpeedTestConfig.h.in
@@ -8,3 +8,6 @@
 #define SPEED_TEST_USER_AGENT "@SpeedTest_USER_AGENT@"
 #define SPEED_TEST_SERVER_LIST_URL "@SpeedTest_SERVER_LIST_URL@"
 #define SPEED_TEST_IP_INFO_API_URL "@SpeedTest_IP_INFO_API_URL@"
+#define SPEED_TEST_API_URL "@SpeedTest_API_URL@"
+#define SPEED_TEST_API_REFERER "@SpeedTest_API_REFERER@"
+#define SPEED_TEST_API_KEY "@SpeedTest_API_KEY@"
