--- a/SpeedTestConfig.h.in
+++ b/SpeedTestConfig.h.in
@@ -4,6 +4,7 @@
 #define SpeedTest_SYSTEM_PROCESSOR "@SpeedTest_SYSTEM_PROCESSOR@"
 #define SpeedTest_SYSTEM "@SpeedTest_SYSTEM@"
 #define SpeedTest_AUTHOR "@SpeedTest_AUTHOR@"
+#define SpeedTest_HOME_PAGE "@SpeedTest_HOME_PAGE@"
 
 #define SPEED_TEST_USER_AGENT "@SpeedTest_USER_AGENT@"
 #define SPEED_TEST_SERVER_LIST_URL "@SpeedTest_SERVER_LIST_URL@"
