--- a/SpeedTestConfig.h.in
+++ b/SpeedTestConfig.h.in
@@ -14,3 +14,4 @@
 #define SPEED_TEST_API_URL "@SpeedTest_API_URL@"
 #define SPEED_TEST_API_REFERER "@SpeedTest_API_REFERER@"
 #define SPEED_TEST_API_KEY "@SpeedTest_API_KEY@"
+#define SPEED_TEST_MIN_SERVER_VERSION @SpeedTest_MIN_SERVER_VERSION@
