Several improvement and code cleanup

--- a/SpeedTestConfig.h.in
+++ b/SpeedTestConfig.h.in
@@ -15,3 +15,4 @@
 #define SPEED_TEST_API_REFERER "@SpeedTest_API_REFERER@"
 #define SPEED_TEST_API_KEY "@SpeedTest_API_KEY@"
 #define SPEED_TEST_MIN_SERVER_VERSION @SpeedTest_MIN_SERVER_VERSION@
+#define SPEED_TEST_LATENCY_SAMPLE_SIZE @SpeedTest_LATENCY_SAMPLE_SIZE@
