--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.7)
 project(SpeedTest)
 
 set (SpeedTest_VERSION_MAJOR 1)
-set (SpeedTest_VERSION_MINOR 7)
+set (SpeedTest_VERSION_MINOR 8)
 set (SpeedTest_SYSTEM_PROCESSOR ${CMAKE_SYSTEM_PROCESSOR})
 set (SpeedTest_SYSTEM ${CMAKE_SYSTEM})
 
@@ -16,6 +16,7 @@ set (SpeedTest_API_URL "http://www.speedtest.net/api/api.php")
 set (SpeedTest_API_REFERER "http://c.speedtest.net/flash/speedtest.swf")
 set (SpeedTest_API_KEY "297aae72")
 set (SpeedTest_MIN_SERVER_VERSION "2.3")
+set (SpeedTest_LATENCY_SAMPLE_SIZE 80)
 
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
@@ -28,7 +29,10 @@ set(SOURCE_FILES
         SpeedTestClient.cpp
         SpeedTestClient.h
         TestConfigTemplate.h
-        MD5Util.cpp MD5Util.h DataTypes.h CmdOptions.h)
+        MD5Util.cpp
+        MD5Util.h
+        DataTypes.h
+        CmdOptions.h)
 
 configure_file (
         "${PROJECT_SOURCE_DIR}/SpeedTestConfig.h.in"
