--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,18 @@
+sudo: false
 language: cpp
-before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -y g++ cmake make libcurl4-openssl-dev libxml2-dev libssl-dev
-
+compiler:
+  - gcc
+install:
+- if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - gcc-4.8
+    - g++-4.8
+    - cmake
+    - libcurl4-openssl-dev
+    - libxml2-dev
+    - libssl-dev
 script: cd cmake_build && cmake -DCMAKE_BUILD_TYPE=Release .. && make
