--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ CMakeFiles/SpeedTest.dir/DependInfo.cmake
 CMakeFiles/SpeedTest.dir/flags.make
 CMakeFiles/SpeedTest.dir/link.txt
 CMakeFiles/SpeedTest.dir/progress.make
+CMakeFiles/Progress/1
+CMakeFiles/Progress/count.txt
